
2001-07-03  Corey Minyard <minyard@acm.org>
	
	* Makefile.am, ser2net.1, ser2net.8, ser2net.spec - Moved ser2net
	to /usr/sbin, renamed the makefile to have a .8 extension and
	put it in /usr/share/man.

	* controller.c - Fixed problems with telnet handling in the
	control interface.
	
	* Updated to version 1.4
	
2001-06-29  Corey Minyard <minyard@acm.org>

	* ser2net.spec - Actually put the changed version number in
	the file, set the prefix to '/usr'.

	* configure.in - Added libnsl for Redhat systems, changed
	to AC_CHECK_LIB.

	* all - changed to version 1.3.

2001-06-28  Corey Minyard <minyard@acm.org>

	* dataxfer.c - Added the ability to convert a telnet break
	to a serial port break.

	* configure.in - Updated to version 1.3

	* ser2net.spec - Added this file for RPM building, from Ivan
	Francolin Martinez.

	* dataxfer.c - Added a tcp_wrappers implementation, from Ivan
	Francolin Martinez.  However, some configure work needs to
	be done to make it actually work properly.

	* dataxfer.c, controller.c, configure.in, ser2net.1 - Fixed the
	tcp_wrappers stuff to work properly, did the config stuff for it,
	and added it to the control port as well.

2001-06-15  Corey Minyard <minyard@acm.org>
	
	* controller.c - Made sure the monitor port was set to null
	when the port exited.

	* ser2net.c, ser2net.1 - Added a "-d" option to send debug
	output to the console and modified "-n" to just not detach.
	
2001-06-05  Corey Minyard <minyard@acm.org>

	* ser2net.c, controller.c - added a way to query the version from
	the command line and from the controller port.

	* controller.c, controller.h, dataxfer.c, dataxfer.h - added
	monitoring of data flowing into a port.  It's somewhat primitive
	yet, but still useful

	* controller.c, dataxfer.c, dataxfer.h - added a way to disconnect
	a port from the control port.

2001-06-04  Corey Minyard <minyard@acm.org>

	* Initial creation.
