@@ -94,6 +94,10 @@ set the parity.
 set the number of stop bits.
 .I 7DATABITS, 8DATABITS
 set the number of data bits.
+.I XONXOFF
+Turns on XON/XOFF support.
+.I LOCAL
+Ignores the modem control lines (DCD, DTR, etc.)
 .TP
 .B setportenable <tcp port> <enable state>
 Sets the port operation state.  Valid states are:
@@ -151,6 +155,10 @@ set the parity.
 set the number of stop bits.
 .I 7DATABITS, 8DATABITS
 set the number of data bits.
+.I XONXOFF
+Turns on XON/XOFF support.
+.I LOCAL
+Ignores the modem control lines (DCD, DTR, etc.)
 
 .PP
 Blank lines and lines starting with `#' are ignored.
