@@ -23,7 +23,8 @@
 #            115200 set the various baud rates.  EVEN, ODD, NONE
 #            set the parity.  1STOPBIT, 2STOPBITS set the number
 #            of  stop bits.  7DATABITS, 8DATABITS set the number
-#            of data bits.
+#            of data bits. XONXOFF turns on XON/XOFF support, and
+#            LOCAL turns off monitoring of the modem lines.
 #
 # Note that the same device can be listed multiple times under different
 # ports, this allows the same serial port to have both telnet and raw
